[project]
name = "promptdown"
version = "0.10.0"
description = "A package for loading promptdown files, which are a special type of markdown file for defining structured LLM prompts"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Homepage = "https://github.com/btfranklin/promptdown"
Issues = "https://github.com/btfranklin/promptdown/issues"
Changelog = "https://github.com/btfranklin/promptdown/releases"
Repository = "https://github.com/btfranklin/promptdown.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/**"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.4",
    "flake8>=7.1.1",
]
