[project]
name = "promptdown"
version = "1.1.1"
description = "A package for loading promptdown files, which are a special type of markdown file for defining structured LLM prompts"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown"
]

[project.urls]
Homepage = "https://github.com/btfranklin/promptdown"
Issues = "https://github.com/btfranklin/promptdown/issues"
Changelog = "https://github.com/btfranklin/promptdown/releases"
Repository = "https://github.com/btfranklin/promptdown.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["tests/**"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "flake8>=7.3.0",
]

[tool.pdm.scripts]
test = "pytest"
lint = "flake8 src tests"
